--- a/TP1/Atelierexo3.html
+++ b/TP1/Atelierexo3.html
@@ -10,6 +10,21 @@
 
 </head>
 <body>
+<header>
+    <h4>Merci de bien vouloire Remplir ce formulaire</h4>
+</header>
+<form action="">
+<fieldset class="info1">
+<legend>Informations personelles</legend>
+</fieldset>
+<fieldset class="info2">
+
+</fieldset>
+<fieldset class="info2">
+
+</fieldset>
+
+</form>
 
 </body>
 </html>
