--- a/TP1/Atelierexo3.html
+++ b/TP1/Atelierexo3.html
@@ -66,7 +66,8 @@
 
 </fieldset>
     <div class="info12">
-        <fieldset class="info2">
+        <div class="info2">
+        <fieldset >
             <legend>Votre avis m'interesse</legend>
             <p>Vous pensez que la leçon:</p>
             <label for="avis"><input type="checkbox" name="avis" id="">Est trés claire</label><br>
@@ -79,11 +80,14 @@
             </select></label>
 
         </fieldset>
-        <fieldset class="info3">
+        </div>
+        <div class="info3">
+        <fieldset >
             <legend>Des suggestion ?</legend>
             <textarea name="" id="sug" cols="90" rows="12">Tapez ici toute remarque que vous jugez utile</textarea>
 
         </fieldset>
+        </div>
     </div>
     <div class="buttons">
         <button id ="ok" type="submit">Envoyer</button>
