--- a/tp En classe/mypage.html
+++ b/tp En classe/mypage.html
@@ -16,7 +16,7 @@
         <button id="b2" onclick="mostview()">Les plus regarde</button>
         <button id="b3" onclick="fastest()">Les plus rapide de croissance</button>
     </div>
-    <div >
+    <div id="tabl" >
         <table id="tab">
 
         </table>
