--- a/tp En classe/mypage.html
+++ b/tp En classe/mypage.html
@@ -12,9 +12,9 @@
 <div id="content">
     <div id="entete"><h1>Les Streamer twitch francais les plus suivis</h1><div id="under"></div></div>
     <div id="buttons">
-        <button id="b1" onclick="populair()">Les plus populaire</button>
-        <button id="b2" onclick="mostview()">Les plus regarde</button>
-        <button id="b3" onclick="fastest()">Les plus rapide de croissance</button>
+        <button id="b1" onclick="affichertableau(mostpopular)">Les plus populaire</button>
+        <button id="b2" onclick="affichertableau(mostViewed)">Les plus regarde</button>
+        <button id="b3" onclick="affichertableau(fastcroissance)">Les plus rapide de croissance</button>
     </div>
     <div id="tabl" >
         <table id="tab">
