--- a/TP2/EX5/form.html
+++ b/TP2/EX5/form.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>EX%</title>
 </head>
 <body>
-$END$
+<div id="content">
+  <h2>Enregistrer don</h2>
+  <form action="ex5.php" method="post">
+    <table>
+      <tr>
+        <td>Nom :</td>
+        <td><input type="text" name="nom"></td>
+      </tr>
+      <tr>
+        <td>Age :</td>
+        <td><input type="number" name="age"></td>
+      </tr>
+      <tr>
+        <td>Mail :</td>
+        <td><input type="text" name="mail" id=""></td>
+      </tr>
+      <tr>
+        <td>Valeur de Don :</td>
+        <td><input type="number" name="don" ></td>
+      </tr>
+      <tr>
+        <td><input type="submit" value="Enregistrer" style="background-color: dodgerblue"></td>
+        <td><a href="results.php">Resultats</a></td>
+      </tr>
+    </table>
+  </form>
+</div>
 </body>
 </html>
