--- a/TP2/EX6/ex6.html
+++ b/TP2/EX6/ex6.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>EX6</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-$END$
+<div id="content">
+
+        <div class="card text-center">
+            <div class="card-header">
+                Bienvenue
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Agence Immobiliere</h5>
+                <p class="card-text">comment pouvons vous aider</p>
+
+                <a class="btn btn-primary" href="ex6.php?choix=acheter">Acheter</a>
+                <a class="btn btn-success" href="ex6.php?choix=vendre">Vendre</a>
+                <a class="btn btn-info" href="ex6.php?choix=louer">Louer</a>
+
+
+            </div>
+            <div class="card-footer text-muted">
+
+            </div>
+        </div>
+
+
+
+</div>
+
 </body>
 </html>
