--- a/TP2/EX6/louer.html
+++ b/TP2/EX6/louer.html
@@ -1,3 +1,21 @@
-<?php
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-?>
+    <title>Louer</title>
+</head>
+<body>
+<form>
+    <div class="form-group">
+        <label for="exampleInputEmail1">Que voulez vous louer</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="titre">
+        <small id="emailHelp" class="form-text text-muted">Specifier le nom du produit.</small>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Chercher</button>
+</form>
+</body>
+</html>
