--- a/TP4/supprimer.html
+++ b/TP4/supprimer.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Supprimer</title>
 </head>
 <body>
+    <center>
+        <h3>Donner le nom de l'artiste a supprimer</h3>
+        <form action="supprimer.php" method="post">
+            <label for="nom">Nom </label>
+            <input name="nom" id="nom" type="text"><br>
+            <input type="submit" value="supprimer">
 
+        </form>
+    </center>
 </body>
 </html>
