--- a/TP4/ajout.html
+++ b/TP4/ajout.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <center>
-    <form action="ajout.php" method="post">
+    <form action="ajouter.php" method="post">
         <table class="table">
             <thead>
             <tr>
