--- a/TP4/index.html
+++ b/TP4/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Artiste</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-$END$
+<center>
+<center style="margin-top: 190px ; border: 3px solid black;width: 50%;border-radius: 20px">
+  <div><a class="btn btn-primary" href="consulter.php">Consulter</a></div>
+  <br>
+  <div><a class="btn btn-success" href="ajout.html">Ajouter</a></div>
+  <br>
+  <div><a class="btn btn-danger" href="supprimer.html">Supprimer</a></div>
+</center>
+</center>
 </body>
 </html>
